--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Main2Activity"
-            android:label="@string/title_activity_main2"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".MovieDetailActivity"></activity>
+
+        <activity android:name=".MovieDetailActivity"
+                  android:parentActivityName=".MainActivity"
+            ></activity>
     </application>
 
 </manifest>
